fix: filter z-index order

--- a/apps/second-hand-car/src/app/components/header/header.component.scss
+++ b/apps/second-hand-car/src/app/components/header/header.component.scss
@@ -39,7 +39,7 @@
         &__item {
             flex-wrap: wrap;
             flex: 1 1 0;
-            z-index: 1;
+            z-index: 2;
         }
     }
 
